# mlops_hw1_ilia_zubov

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
src/: prepare.py  test.py  train.py
