[project]
name = "homework_1"
version = "0.1.0"
description = "Homework 1. Topic: 'Fundamentals of Reproducible Machine Learning. MLOps Lifecycle.'"
readme = "README.md"
dependencies = [
    "dvc[hf,huggingface]>=3.64.0",
    "huggingface-hub>=1.1.6",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.6",
    "scikit-learn>=1.7.2",
]
